--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ DB_PASSWORD=
 DB_NAME=soloparent
 
 # URL configuration for deployment
-FRONTEND_URL=http://localhost:3000
-BACKEND_URL=http://localhost:8081
+FRONTEND_URL=https://frontend-nine-gamma-56.vercel.app
+BACKEND_URL=https://backend-production-f061.up.railway.app
