--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ DB_PASSWORD=
 DB_NAME=soloparent
 
 # URL configuration for deployment
-FRONTEND_URL=https://frontend-djb3u6c4k-yexius-projects.vercel.app
-BACKEND_URL=https://backend-production-f061.up.railway.app
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:8081
