--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=soloparent
+DB_PORT=3306
 
 # URL configuration for deployment
 FRONTEND_URL=http://localhost:3000
